<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_address_manage"
        android:title="@string/detail_address_management"
        android:icon="@drawable/ico_address"/>

    <item
        android:id="@+id/nav_copy_address"
        android:title="@string/detail_copy_address"
        android:icon="@drawable/ico_copy_address"/>
    <item
        android:id="@+id/nav_records"
        android:title="@string/detail_records"
        android:icon="@drawable/ico_records"/>
    <item
        android:id="@+id/nav_sign"
        android:title="@string/sign_message"
        android:icon="@drawable/ico_sign_msg"/>
    <item
        android:id="@+id/nav_deposit_to_contract"
        android:title="@string/nav_deposit_to_contract"
        android:icon="@drawable/ico_deposit_to_contract"/>
    <item
        android:id="@+id/nav_withdraw_from_contract"
        android:title="@string/nav_withdraw_from_contract"
        android:icon="@drawable/ico_withdraw_from_contract"/>

</menu>
