<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:minHeight="?attr/actionBarSize"
            app:contentInsetStartWithNavigation="0dp"
            app:navigationIcon="@drawable/ico_back"
            app:title="@string/add_cold_account_title"
            app:titleTextColor="@color/white" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_cold_account_scan_tip" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/add_cold_account_field_address"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_stroke_blue_border_radius_6"
                    android:enabled="false"
                    android:gravity="start"
                    android:hint="@string/add_cold_account_field_address_hint"
                    android:minHeight="80dp"
                    android:padding="8dp"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:gravity="start"
                    android:text="@string/add_cold_account_field_public_key"
                    android:textColor="@color/text_strong"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_public_key"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_stroke_blue_border_radius_6"
                    android:enabled="false"
                    android:gravity="start"
                    android:hint="@string/add_cold_account_field_address_hint"
                    android:minHeight="80dp"
                    android:padding="8dp"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn_next"
                    style="@style/BasicButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/complete" />

            </LinearLayout>

        </ScrollView>
    </LinearLayout>
</layout>
