<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

        <variable
            name="click"
            type="android.view.View.OnClickListener" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:contentInsetStartWithNavigation="0dp"
            app:navigationIcon="@drawable/ico_back"
            app:title="@string/token_list_add_token" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_margin">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:background="@color/white"
                    >


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="vertical">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginBottom="12dp">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textAllCaps="true"
                                android:text="@string/add_token_token_id"
                                android:textColor="@color/secondary_text"
                                android:textSize="15sp"/>

                            <Button
                                android:id="@+id/btn_paste"
                                style="@style/BasicButton.Bordered.Small"
                                android:drawableStart="@drawable/ico_paste_small"
                                android:drawablePadding="6dp"
                                android:onClick="@{click}"
                                android:text="@string/send_paste_btn"
                                android:theme="@style/BasicButton.Bordered.Small" />

                            <Button
                                android:id="@+id/btn_scan"
                                style="@style/BasicButton.Bordered.Small"
                                android:layout_marginStart="10dp"
                                android:drawableStart="@drawable/ico_scan_small"
                                android:drawablePadding="6dp"
                                android:onClick="@{click}"
                                android:text="@string/send_scan_btn"
                                android:theme="@style/BasicButton.Bordered.Small" />

                        </LinearLayout>

                        <EditText
                            android:id="@+id/et_token_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/add_token_input_hint"
                            android:textSize="18sp"
                            />

                        <TextView
                            android:id="@+id/tv_token_error"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/add_token_err_id"
                            android:textColor="@color/error"
                            android:textSize="13sp"
                            android:visibility="gone" />

                    </LinearLayout>
                    <Button
                        android:id="@+id/btn_add"
                        style="@style/BasicButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:onClick="@{click}"
                        android:text="@string/add_token_add" />

                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcv_tokens"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:nestedScrollingEnabled="false"
                    />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>