<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="256dp"
            android:layout_height="256dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/ico_welcome" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingStart="@dimen/normal_padding"
            android:paddingEnd="@dimen/normal_padding">

            <me.grantland.widget.AutofitTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/welcome_use"
                android:textColor="@color/text_strong"
                android:textSize="40sp"
                app:minTextSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:text="@string/welcome_tips"
                android:textColor="@color/text_strong"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_wallet_init_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <Button
                android:id="@+id/btn_create"
                style="@style/BasicButton"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="@dimen/normal_padding"
                android:text="@string/wallet_create" />

            <Button
                android:id="@+id/btn_import"
                style="@style/BasicButton.Bordered.Orange"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/wallet_import"
                android:theme="@style/BasicButton.Bordered.Orange" />
        </LinearLayout>
    </FrameLayout>
</layout>